@@ -14,3 +14,18 @@ class Base:
 class Subclass(Base):
     def my_method(self): # [overridden-final-method]
         pass
+
+# Check for crash on method definitions not at top level of class
+# https://github.com/PyCQA/pylint/issues/5648
+class BaseConditional:
+
+    create_final_method = True
+    if create_final_method:
+        @final
+        def my_method(self):
+            pass
+
+class Subclass2(BaseConditional):
+
+    def my_method(self): # [overridden-final-method]
+        pass
